testsuite/poke.pkl/arrays-index-diag-3.pk
/* { dg-do compile } */

var a = [1,2,3][3+1]; /* { dg-error "" } */
